tests/errors/union.stderr
error: Cannot derive Id for union, expected struct.
 --> $DIR/union.rs:4:1
  |
4 | union Test {
  | ^^^^^
